Fix left header alignment with header-container grid

--- a/styles.css
+++ b/styles.css
@@ -113,23 +113,61 @@ body > .main-content{
     padding-right: 8px;
 }
 
+/* HEADER LAYOUT */
+
+.header-container{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(20, 1fr);
+}
+
 /* HEADER LAYOUT -- TOP */
 
+.header-top{
+    grid-column: 2 / -2;
+
+    display: grid;
+    grid-template-columns: 1fr 17fr 1fr 1fr 2fr;
+    align-items: center;
+}
+
 .header-top #search-box{
-    width: 40vw;
+    width: 50vw;
     border-radius: 1rem;
     height: 2rem;
     border: none;
     background-color: rgba(169, 169, 169, 0.578);
+}
 
+.header-top .notif-icon{
+    justify-self: center;
+}
+
+.header-top .user-icon-1{
+    justify-self: center;
 }
 
 .header-top .user-name-small{
+    justify-self: center;
+
     font-weight: 600;
     font-size: 16px;
 }
 
 /* HEADER LAYOUT -- BOTTOM */
+
+.header-bottom{
+    grid-column: 2 / -2;
+
+    display: grid;
+    grid-template-columns: 1fr 12fr 3fr 3fr 3fr;
+    align-items: center;
+}
+
+.header-bottom .user-icon-1{
+
+}
+
 
 .header-bottom button{
     width: 5vw;
